# oxc-fuzz-parser

./: .gitignore  Cargo.toml  README.md  fuzz.js  main.js  package.json  pnpm-lock.yaml
.github/workflows/: fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs  regex.rs
src/: main.rs
