[package]
name    = "oxc_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doctest = false

[dependencies]
oxc = "0.23.0"
libfuzzer-sys = "0.4.7"
